# Chess

chess/: CMakeLists.txt
chess/src/: main.cpp
chess/src/chess/: Board.cpp  Board.h  Engine.cpp  Engine.h  Eval.cpp  Eval.h  MoveGen.cpp  MoveGen.h  Rules.cpp  Rules.h  Search.cpp  Search.h  Types.h
chess/src/gui/: Gui.cpp  Gui.h
